--- a/Lab/coordinate-converter/sph.html
+++ b/Lab/coordinate-converter/sph.html
@@ -2,92 +2,58 @@
 <html>
 <head>
   <title>Coordinate Conversion Simulator</title>
-  <!-- <style>
-    /* CSS Styles */
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      width: 500px;
-      margin: 0 auto;
-    }
-
-    .input-group {
-      margin-bottom: 10px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input {
-      width: 100%;
-      padding: 5px;
-    }
-
-    button {
-      padding: 10px;
-      background-color: #007bff;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    #result {
-      margin-top: 10px;
-      font-weight: bold;
-    }
-  </style> -->
-
   <style>
-    /* CSS Styles */
-    body {
-      font-family: Arial, sans-serif;
-      background-image: url(co-ord.jpg);
-    }
-
-    .container {
-      width: 500px;
-      margin: 0 auto;
-      color: white;
-      text-align: center;
-    }
-
-    .input-group {
-      margin-bottom: 10px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
-
-    input {
-      width: 100%;
-      padding: 5px;
-      color: rgb(7, 6, 37);
-    }
-
-    button {
-      padding: 10px;
-      background-color: #05262d;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-
-    #result {
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    h1{
-      color: white;
-    }
+      /* CSS Styles */
+      body {
+        font-family: Arial, sans-serif;
+        background: url(cartesian.jpg) ;
+  
+       
+      }
+      
+  
+      .container {
+        padding-top: 100px;
+        width: 700px;
+        margin: 0 auto;
+        color: rgb(232, 227, 253);
+        text-align:center;
+      }
+  form{
+    text-align: left;
+  }
+      .input-group {
+        margin-bottom: 10px;
+      }
+  
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
+  
+      input {
+        width: 100%;
+        padding: 5px;
+        color: rgb(7, 6, 37);
+      }
+  
+      button {
+        padding: 10px;
+        background-color: #05262d;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        align-items: center;
+      }
+  
+      #result {
+        margin-top: 10px;
+        font-weight: bold;
+      }
+      h1{
+        color: rgb(240, 243, 244);
+      }
   </style>
-
-
 </head>
 <body>
     <div class="container">
