--- a/Lab/index.html
+++ b/Lab/index.html
@@ -47,7 +47,7 @@
             <a href="#gallery">gallery</a>
           </li>
           <li>
-            <a href="handbook.txt">handbook</a>
+            <a href="COA-Project.pdf">handbook</a>
           </li>
 
         </ul>
